--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
-  "dependencies": {
-    "@11ty/eleventy": "^3.1.2"
+  "name": "oleg-blog",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "npx @11ty/eleventy --serve & npx tailwindcss -i ./src/assets/css/styles.css -o ./_site/assets/css/styles.css --watch",
+    "build:css": "npx tailwindcss -i ./src/assets/css/styles.css -o ./_site/assets/css/styles.css --minify",
+    "build:11ty": "npx @11ty/eleventy",
+    "build": "npm run build:css && npm run build:11ty"
+  },
+  "devDependencies": {
+    "@11ty/eleventy": "^3.1.2",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
   }
 }
